@@ -4,6 +4,7 @@ BUG: Ticket#182 - List and validator controls cause problem in child classes (Qi
 BUG: Ticket#191 - Duplicated postbacks occur when using TButton with validators (Qiang)
 BUG: Ticket#213 - PRADO Requirements Checker charset error (Qiang)
 BUG: Ticket#234 - Postback target could be out of date (Qiang)
+BUG: Ticket#239 - Ondeactivate handler for the first View of MultiView is always fired (Qiang)
 BUG: Ticket#244 - redirect() needs absolute URL (Qiang)
 BUG: Ticket#245 - getIsSecureConnection() is not working correctly (Qiang)
 CHG: ensureChildControls() is now invoked in TControl::initRecursive (Qiang)
